--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="content">
-<h1>magicksack</h1>
+<h1 class="libTop">magicsack</h1>
 
 <p>A utility for storing secret things, possibly over a distributed set of
 servers.</p>
