index.html updated

--- a/index.html
+++ b/index.html
@@ -11,8 +11,129 @@
 <div class="content">
 <h1 class="libTop">magicsack</h1>
 
-<p>A utility for storing secret things, possibly over a distributed set of
-servers.</p>
+<p><strong>magicSack</strong> is a utility for storing secret things either locally (on the
+user&rsquo;s laptop or workstation) or over a distributed set of cooperating servers
+or on one of the cloud services or on some combination of the three.</p>
+
+<p>MagickSack is in development using Python 3 on Linux.  It should
+work on Windows as well, but no effort will be made to confirm this
+until the development version is stable on Linux.</p>
+
+<h2>Technical Details</h2>
+
+<p>MagickSack is protected by a user-selected passphrase.  This is hashed
+using SHA256 and then the 256 bits of the hash are used as an AES
+key.  When documents are added to the system, the user supplies a unique
+name and then the document is AES-encrypted using that key before storage.
+It should be possible to generate a different key for each document.  The
+index from the user-assigned key to the encrypted document is stored
+locally.  The encrypted documents may be stored locally or on one or more
+cooperating servers or on a cloud service or any combination of the
+three.  The index is always digitally signed and AES-encrypted before
+being stored.</p>
+
+<p>The system generates two 2048-bit RSA keypairs.  One of these, <strong>skPriv</strong>,
+is used
+for creating digital signatures; specifically it is used for signing
+the index.  The other, <strong>ckPriv</strong>, is used for encrypting data while
+setting up communications with <strong>peers</strong>, hosts cooperating with
+<code>magicSack</code> in the storage of documents.</p>
+
+<h2>Command Line</h2>
+
+<pre><code>magicSack init [-f] [-u U_Dir]
+magicSack destroy
+magicSack add      FILE [FILE]*
+magicSack list     [FILE [FILE]*]
+magicSack show     FILE [FILE]*
+magicSack drop     FILE [FILE]*
+magicSack addPeer  FQDN[:PORT] [FQDN[:PORT]]*
+magicSack listPeer FQDN
+magicSack dropPeer FQDN[:PORT] [FQDN[:PORT]]*
+</code></pre>
+
+<p>Each of these commands asks for the passphrase.  Except in the case
+of <code>init</code>, if the passphrase is wrong, the command will have no effect.</p>
+
+<h3>init</h3>
+
+<p>This command creates a new local instance, storing information under
+<code>.magicsack</code> in the user&rsquo;s home directory.  If the <code>.magicsack</code> directory
+aleady exists, the command will fail, unless the command line includes
+the <code>-f</code> or <code>--force</code> option.  Unless otherwise specified documents will be
+stored in
+<code>.magicsack/uDir</code>.  If the <code>-u</code> option is present, documents will be stored
+in <code>uDir</code> instead.</p>
+
+<p>The <code>init</code> command asks for a passphrase which then becomes the key
+for all information stored.</p>
+
+<p>This command is destructive.  Any existing information under <code>.magicsack</code>
+will be irrevocably deleted.</p>
+
+<p>If data is to be stored on the cloud, <code>uDir</code> <strong>must</strong> be specified and
+should be the path to a directory backed up on the cloud.  If that
+directory does not exist, <code>magicSack</code> will attempt to create it</p>
+
+<h3>destroy</h3>
+
+<p>This command erases anything under <code>.magicsack</code>.  If <code>uDir</code> is not a
+subdirectory of <code>.magicsack</code>, <code>uDir</code> will be erased if the system permits.</p>
+
+<p>This operation is irrevocable.  If the correct passphrase is supplied,
+all information on the user&rsquo;s machine relating to the <code>magicSack</code>
+installation will be erased, unless somehow otherwise protected by
+the system.</p>
+
+<h3>add</h3>
+
+<p>The <code>add</code> command adds the files listed.  These are specified using <strong>globs</strong>,
+meaning patterns.  So if for example <code>FILE</code> is <code>abc*</code>, then all local files
+whose names begin with <code>abc</code> will be added to magicsack.</p>
+
+<p>This is not a destructive operation.</p>
+
+<h3>list</h3>
+
+<p><code>list</code> is followed by zero or more globs.  If there are no globs, then
+the entire contents of the magicksack store will be listed.  Otherwise
+any file matching the pattern will be listed</p>
+
+<p>The listing contains only information about the document(s) requested,
+most importantly the document name (which may be a path) and size,
+where the size is the size before encryption.</p>
+
+<h3>show</h3>
+
+<p><code>show</code> must be followed by one or more globs.  The contens of any file
+whose name or path matches the pattern(s) will be displayed.  In other
+words, this information will be sent to <code>stdout</code>, which may of course
+be directed to a file.</p>
+
+<h3>drop</h3>
+
+<p>The <code>drop</code> command deletes any items matching the file name pattern(s)
+following from the store.  This action is irrevocable.</p>
+
+<h3>addPeer</h3>
+
+<p>This command adds a remote host (another machine that can be reached
+over the Internet) to the list of cooperating servers.  FQDN may be
+either a domain name or an IP address, a <strong>dotted quad</strong> like 1.2.3.4.
+Either may optionally be followed by a port number.</p>
+
+<h3>listPeer</h3>
+
+<p>Lists domain name or IP address and port number where the name
+matches <code>FQDN</code> (a glob).  If <code>FQDN</code> is not present on the command line,
+all such peers are listed.</p>
+
+<h3>dropPeer</h3>
+
+<p>Drops peers matching FQDN from the local list of cooperating peers.  This
+should be an eventually destructive act: the remote peers will at some
+point remove the data stored there, but there is no guarantee when this
+will occur.  (Remember that all data stored remotely is encrypted.)</p>
   <div class="f">
     <hr />
     <div class="license">
