--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ user&rsquo;s laptop or workstation) or
 <em>over a distributed set of cooperating servers</em> or on one of the
 <em>cloud services</em> or on some combination of the three.</p>
 
-<p>MagickSack is in development using Python 3 on Linux.  It should
+<p>MagicSack is in development using Python 3 on Linux.  It should
 work on Windows as well, but no effort will be made to confirm this
 until the development version is stable on Linux.</p>
 
 <h2>Technical Details</h2>
 
-<p>MagickSack is protected by a user-selected passphrase.  This is hashed
+<p>MagicSack is protected by a user-selected passphrase.  This is hashed
 using SHA256 and then the 256 bits of the hash are used as an AES
 key.  When documents are added to the system, the user supplies a unique
 name and then the document is AES-encrypted using that key before storage.
@@ -42,15 +42,15 @@ setting up communications with <strong>peers</strong>, hosts cooperating with
 
 <h2>Command Line</h2>
 
-<pre><code>magicSack init [-f] [-u U_Dir]
-magicSack destroy
-magicSack add      FILE [FILE]*
-magicSack list     [FILE [FILE]*]
-magicSack show     FILE [FILE]*
-magicSack drop     FILE [FILE]*
-magicSack addPeer  FQDN[:PORT] [FQDN[:PORT]]*
-magicSack listPeer FQDN
-magicSack dropPeer FQDN[:PORT] [FQDN[:PORT]]*
+<pre><code>magicSack [-m DIR_NAME] init [-f] [-u U_Dir]
+magicSack [-m DIR_NAME] destroy
+magicSack [-m DIR_NAME] add      FILE [FILE]*
+magicSack [-m DIR_NAME] list     [FILE [FILE]*]
+magicSack [-m DIR_NAME] show     FILE [FILE]*
+magicSack [-m DIR_NAME] drop     FILE [FILE]*
+magicSack [-m DIR_NAME] addPeer  FQDN[:PORT] [FQDN[:PORT]]*
+magicSack [-m DIR_NAME] listPeer FQDN
+magicSack [-m DIR_NAME] dropPeer FQDN[:PORT] [FQDN[:PORT]]*
 </code></pre>
 
 <p>Each of these commands asks for the passphrase.  Except in the case
