changes in web pages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <h1 class="libTop">magicsack</h1>
 
 <p><strong>magicSack</strong> is a utility for storing secret things either <em>locally</em> (on the
-user&rsquo;s laptop or workstation) or
+user&#39;s laptop or workstation) or
 <em>over a distributed set of cooperating servers</em> or on one of the
 <em>cloud services</em> or on some combination of the three.</p>
 
@@ -59,7 +59,7 @@ of <code>init</code>, if the passphrase is wrong, the command will have no effec
 <h3>init</h3>
 
 <p>This command creates a new local instance, storing information under
-<code>.magicsack</code> in the user&rsquo;s home directory.  If the <code>.magicsack</code> directory
+<code>.magicsack</code> in the user&#39;s home directory.  If the <code>.magicsack</code> directory
 aleady exists, the command will fail, unless the command line includes
 the <code>-f</code> or <code>--force</code> option.  Unless otherwise specified documents will be
 stored in
@@ -82,7 +82,7 @@ directory does not exist, <code>magicSack</code> will attempt to create it</p>
 subdirectory of <code>.magicsack</code>, <code>uDir</code> will be erased if the system permits.</p>
 
 <p>This operation is irrevocable.  If the correct passphrase is supplied,
-all information on the user&rsquo;s machine relating to the <code>magicSack</code>
+all information on the user&#39;s machine relating to the <code>magicSack</code>
 installation will be erased, unless somehow otherwise protected by
 the system.</p>
 
